# internal/handler/user/reset_password_handler.go
@@ -1,0 +1,24 @@
+package user
+
+import (
+	"net/http"
+
+	"github.com/colinrs/prompthub/internal/logic/user"
+	"github.com/colinrs/prompthub/internal/svc"
+	"github.com/colinrs/prompthub/internal/types"
+	"github.com/colinrs/prompthub/pkg/httpy"
+	"github.com/zeromicro/go-zero/rest/httpx"
+)
+
+func ResetPasswordHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.ResetPasswordRequest
+		if err := httpx.Parse(r, &req); err != nil {
+			httpy.ResultCtx(r, w, nil, err)
+			return
+		}
+		l := user.NewResetPasswordLogic(r.Context(), svcCtx)
+		resp, err := l.ResetPassword(&req)
+		httpy.ResultCtx(r, w, resp, err)
+	}
+}
